--- a/src/sass/components/_todoitem.scss
+++ b/src/sass/components/_todoitem.scss
@@ -24,17 +24,18 @@
       cursor: pointer;
       background-color: transparent;
 
-      &:hover img {
-        opacity: 1;
+      &:hover {
+        color: $color-primary;
       }
 
-      & img {
-        height: 1rem;
-        width: 1rem;
+
+      & > .icon {
+        width: 2rem;
+        height: 2rem;
         border: none;
         cursor: pointer;
         background-color: transparent;
-        opacity: 0;
+        stroke: $color-primary-light;
         transition: all 200ms ease-in-out;
       }
     }
