--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,8 +1,32 @@
 .header {
   display: flex;
+  width: 100%;
   flex-direction: column;
   margin: 3rem 0 1.5rem 0;
-  width: clamp(20rem, 10vw + 20rem, 42rem);
+
+  &_sub {
+
+    &_container {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    &_button {
+      background-color: transparent;
+      border: none;
+      cursor: pointer;
+      font-size: 1rem;
+      font-weight: 700;
+      color: $color-primary-light;
+      transition: all 200ms ease-in-out;
+
+      &:hover {
+        color: $color-primary;
+      }
+    }
+  }
 
   &_subtitle {
     font-size: 1.5rem;
